[package]
name = "toks"
version = "0.1.1"
authors = ["Ernestas Poskus <ernestas.poskus@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["HTML", "parsing"]
repository = "https://github.com/ernestas-poskus/toks.rs"
homepage = "https://github.com/ernestas-poskus/toks.rs"
documentation = "https://docs.rs/toks"
description = """
Efficient tokens for `html5ever::rcdom::RcDom` `Handle` parsing
aiming for O(1) HTML DOM walking & efficiency.
"""
categories = ["parsing"]

[dependencies]
html5ever = "0.18.0"

[badges]
travis-ci = { repository = "ernestas-poskus/toks.rs" }
