[package]
authors = ["Ernestas Poskus <ernestas.poskus@gmail.com>"]
categories = ["parsing"]
description = """
Efficient tokens for `html5ever::rcdom::RcDom` `Handle` parsing
aiming for O(1) HTML DOM walking & efficiency.
"""
documentation = "https://docs.rs/toks"
homepage = "https://github.com/ernestas-poskus/toks.rs"
keywords = [
    "HTML",
    "parsing",
]
license = "MIT/Apache-2.0"
name = "toks"
readme = "README.md"
repository = "https://github.com/ernestas-poskus/toks.rs"
version = "0.8.0"

[badges.travis-ci]
repository = "ernestas-poskus/toks.rs"

[dependencies]
html5ever = "0.22.5"
